# renderer

./: CMakeLists.txt  README.md  main.cpp
include/: Image.h  ParallelRenderer.h  Renderer.h  SequentialRenderer.h
include/experiments/: Experiments.h
include/renderer/: OptimizedParallelRenderer.h  Renderer.h  SequentialRenderer.h  SimpleParallelRenderer.h  SpatialGridParallelRenderer.h  VectorizedRenderer.h
include/shape/: Circle.h  IShape.h  IShapeVisitor.h  Rectangle.h  Triangle.h
include/utils/: Utils.h
src/: Image.cpp  ParallelRenderer.cpp  Renderer.cpp  SequentialRenderer.cpp
src/renderer/: OptimizedParallelRenderer.cpp  Renderer.cpp  SequentialRenderer.cpp  SimpleParallelRenderer.cpp  SpatialGridParallelRenderer.cpp  VectorizedRenderer.cpp
src/shape/: Circle.cpp  Rectangle.cpp  Triangle.cpp
